Embed a Flickr slideshow for 2015 edition photos

--- a/source/assets/stylesheets/_landing.scss
+++ b/source/assets/stylesheets/_landing.scss
@@ -95,6 +95,11 @@
   }
 }
 
+.flicker-slideshow {
+  margin-top: $base-spacing * 2;
+  text-align: center;
+}
+
 .location-map {
   margin-top: $base-spacing;
 }
