--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -34,6 +34,16 @@ title: Rails Girls Saint-Étienne
     </div>
   </div>
 
+  <div class="section photos">
+    <h3 class="section-header">Précédente édition</h3>
+    <p>Pour avoir une meilleure idée de ce qui vous attend, voici quelques photos de la précédente édition.</p>
+    <div class="flicker-slideshow">
+      <a data-flickr-embed="true" href="https://www.flickr.com/photos/137691480@N03/albums/72157661095970232" title="Rails Girls october 2015">
+        <img src="https://c4.staticflickr.com/6/5658/22966213435_10c538cdf1_z.jpg" width="640" height="427" alt="Rails Girls october 2015">
+      </a>
+      <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+    </div>
+  </div>
 
   <div id="tickets" class="section tickets">
     <h3 class="section-header">Tickets</h3>
@@ -55,7 +65,6 @@ title: Rails Girls Saint-Étienne
       Les ateliers Rails Girls vous lancent, par petits groupes, dans les premiers pas du développement Web.<br>
       Vous aurez des présentations éclair, découverte du langage, la rencontre avec des personnes qui sont dans la même optique que vous, et bien sûr... du code !
     </p>
-    <p>Pour avoir une meilleure idée de ce qui vous attend, vous pouvez regarder ces vidéos ou photos de <%= link_to 'la précédente édition', 'flic.kr/s/aHskp9Kri3 ' %>, ou celles de <%= link_to 'Berlin', 'http://railsgirls.com/berlin' %>, <%= link_to 'Cracovie', 'http://railsgirls.com/krakow' %> et <%= link_to 'Singapour', 'http://railsgirls.com/singapore' %>.</p>
   </div>
 
   <div class="section location">
