Add to FAQ some details about what must to be brought

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -99,7 +99,12 @@ title: Rails Girls Saint-Étienne
       <strong>Pour qui ?</strong>
       Les femmes de tous les âges, à l’aise avec l’outil informatique.
       Aucune expérience de programmation n'est requise, nous avons tous les niveaux.
-      Merci d'apporter votre ordinateur portable pour programmer !
+    </p>
+    <p>
+      <strong>Quel matériel apporter ?</strong>
+      Merci d'apporter votre ordinateur portable car nous n'avons aucune machine de disponible sur place.
+      Vous pouvez venir soit avec un PC (Windows ou Linux), soit avec un Mac.
+      N'oubliez pas votre chargeur :)
     </p>
     <p>
       <strong>Il y a une sélection ?</strong>
