Add a FAQ note about bringing children

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -98,7 +98,11 @@ title: Rails Girls Saint-Étienne
     <p>
       <strong>Pour qui ?</strong>
       Les femmes de tous les âges, à l’aise avec l’outil informatique.
-      Aucune expérience de programmation n'est requise, nous avons tous les niveaux.
+      Aucune expérience de programmation n'est requise, nous avons tous les niveaux.<br>
+    </p>
+    <p>
+      <strong>Qui gardera mes petits ? 😱</strong>
+      Envie de découvrir la programmation et passer un bon moment en famille ? Pourquoi ne pas venir avec un de vos enfants (d'au moins 12 ans).
     </p>
     <p>
       <strong>Quel matériel apporter ?</strong>
