Update the press release page for 2016 edition

--- a/source/press.html.erb
+++ b/source/press.html.erb
@@ -13,10 +13,10 @@ title: Rails Girls Saint-Étienne
 
     <h2>Rails Girls : une application Web en un jour, c'est possible !</h2>
 
-    <p>Saint-Étienne le 23 septembre 2015.</p>
+    <p>Saint-Étienne le 17 octobre 2016.</p>
 
     <p>
-      Ce 23-24 octobre se déroule le premier Rails Girls stéphanois, un événement gratuit d'une soirée et une journée,
+      Ce 25-26 novembre se déroule le deuxième Rails Girls stéphanois, un événement gratuit d'une soirée et une journée,
       destiné prioritairement à des femmes de tous les âges et horizons, durant lequel elles créent une application Web complète,
       aidées par nos fantastiques mentors.
     </p>
@@ -29,15 +29,16 @@ title: Rails Girls Saint-Étienne
 
     <p>
       En d’autres termes rendre la technologie plus accessible à celles qui aimeraient maîtriser un peu plus
-      le développement web mais qui n’arrivent pas à trouver un moyen facile, communautaire et gratuit
+      le développement Web mais qui n’arrivent pas à trouver un moyen facile, communautaire et gratuit
       pour apprendre et promouvoir la diversité dans ce domaine.
     </p>
 
-    <p>Depuis la première édition finlandaise, plus de 220 manifestations Rails Girls ont déjà vu le jour dans une cinquantaine de pays.</p>
+    <p>Depuis la première édition finlandaise, plus de 400 manifestations Rails Girls ont déjà vu le jour dans une cinquantaine de pays.</p>
 
     <p>
-      Pour cette édition, une trentaine de débutantes auront la chance de pouvoir réaliser leur projet
-      et concrétiser leurs premiers pas dans la création d'applications web.
+      Pour cette édition, une quarantaine de débutantes auront la chance de pouvoir réaliser leur projet
+      et concrétiser leurs premiers pas dans la création d'applications Web.
+      Elles pourront être accompagnées d'un de leurs enfants si elles le souhaitent, afin d'apprendre en famille.
     </p>
 
     <p>
@@ -70,21 +71,21 @@ title: Rails Girls Saint-Étienne
 
   <div class="pr-event-details">
     <h3 class="section-header">Programme</h3>
-    <h5>Vendredi 23 oct. à partir de 19h : Install Party</h5>
+    <h5>Vendredi 25 nov. à partir de 19h : Install Party</h5>
     <p>Pour présenter l'événement, faire connaissance entre débutants et mentors, et repartir avec tout ce qu'il faut installé sur son ordinateur !</p>
 
-    <h5>Samedi 24 oct. : Une application en un jour</h5>
+    <h5>Samedi 26 nov. : Une application en un jour</h5>
     <p>Pour tout apprendre de l'informatique et du développement, et (re)prendre le contrôle sur cet univers indispensable qui nous entoure à chaque seconde.</p>
 
     <h3 class="section-header">Lieu</h3>
-    <p>Chez <%= link_to 'Craftsmen', 'http://craftsmen.io' %>, 20 rue Benoît Lauras</p>
+    <p>Batiment des Hautes Technologies, 20 rue Benoît Lauras</p>
 
     <h3 class="section-header">Tarif</h3>
     <p>Gratuit, grâce à nos généreux sponsors !</p>
 
     <h3 class="section-header">Infos pratiques</h3>
     <p><strong>Site officiel et inscriptions</strong><br><%= link_to 'http://railsgirls.webenvert.fr', 'http://railsgirls.webenvert.fr' %></p>
-    <p><strong>Contact presse</strong><br>Mehdi Lahmam <a href="mailto:mehdi@craftsmen.io">mehdi@craftsmen.io</a></p>
+    <p><strong>Contact presse</strong><br>Mehdi Lahmam <a href="mailto:mehdi@lahmam.com">mehdi@lahmam.com</a></p>
     <p><strong>Twitter</strong><br><%= link_to '@RailsGirlsStE', 'http://twitter.com/railsgirlsste' %></p>
 
     <h3 class="section-header">Organisateur</h3>
