Add Lyon JUG and 1D Lab as 2017 first sponsors :heart:

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -81,10 +81,8 @@ title: Rails Girls Saint-Étienne
   <div class="section sponsors">
     <h3 class="section-header">Sponsors</h3>
     <ul class="sponsors-grid">
-      <li><%= image_tag 'http://placehold.it/300x150' %></li>
-      <li><%= image_tag 'http://placehold.it/300x150' %></li>
-      <li><%= image_tag 'http://placehold.it/300x150' %></li>
-      <li><%= image_tag 'http://placehold.it/300x150' %></li>
+      <li><%= link_to image_tag('lyon-jug-logo.jpg'), 'http://www.lyonjug.org/' %></li>
+      <li><%= link_to image_tag('1dlab-logo.jpg'), 'http://1d-lab.eu/' %></li>
     </ul>
     <p>Vous souhaitez nous aider ? <a href="mailto:mehdi@craftsmen.io">Contactez-nous !</a></p>
   </div>
