Add Le Wagon Lyon as a sponsor :love_letter:

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -83,6 +83,7 @@ title: Rails Girls Saint-Étienne
     <ul class="sponsors-grid">
       <li><%= link_to image_tag('lyon-jug-logo.jpg'), 'http://www.lyonjug.org/' %></li>
       <li><%= link_to image_tag('1dlab-logo.jpg'), 'http://1d-lab.eu/' %></li>
+      <li><%= link_to image_tag('lewagon-logo.jpg'), 'https://www.lewagon.com/lyon' %></li>
     </ul>
     <p>Vous souhaitez nous aider ? <a href="mailto:mehdi@craftsmen.io">Contactez-nous !</a></p>
   </div>
